--- a/district.html
+++ b/district.html
@@ -87,7 +87,7 @@
                 <div class="card-body">
                   <h5 class="card-title">KOTTAYAM</h5>
                   <p class="card-text">The top sightseeing places in Kottayam are Kottathavalam, Nadukani, Thirunakkara Mahadev Temple, Kumarakom Bird Sanctuary, Island of Pathiramanal, Illikkal Kallu.Kottayam (IPA: [koːʈːɐjɐm]) is a city in the Indian state of Kerala, flanked by the Western Ghats on the east and the Vembanad Lake and paddy fields of Kuttanad on the west. It is the district headquarters of Kottayam district, located in south-west Kerala.</p>
-                  <a href="#" class="btn btn-primary">GO</a>
+                  <a href="Kottayam.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -99,7 +99,7 @@
                   <p class="card-text">Places in Idukki is full of cliffs, lush greenery, lagoons, tranquil rivers and cascading waterfalls that hypnotize the tourists and leave them with everlasting memories. Having names of Painavu, arch dam, poonchira, Idukki shows a variety in its attractions.Kalvari Mount
 
                     Located on the Kattapana - Idukki Road, Kalvari Mount is a popular hillock and a popular Christian pilgrimage site situated 5 km on the outskirts of the city of Idukki. Also known as Kalyanathandu, the vantage point is perched at a height of 20 m and boasts of scenic sunrise and sunset views to die for.</p>
-                  <a href="#" class="btn btn-primary">GO</a>
+                  <a href="Idukki.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -110,17 +110,17 @@
                   <h5 class="card-title">ERNAKULAM</h5>
                   <p class="card-text">Located in the heart of Ernakulum city in Kerala, Ernakulam Shiva Temple is one of the rare Shiva Temples where… Hill Palace, built in 1865, is the largest archaeological museum in Kerala and the administrative center of Cochin. The palace… Fort Kochi, the western part of the Kochi city of Ernakulam district in Kerala.Ernakulam is the commercial capital and the most developed city of Kerala. This place has great significance in the history. Major portion of the district is from the kingdom of Kochi also called as the Queen of Arabian Sea.
                 </p>
-                  <a href="#" class="btn btn-primary">GO</a>
+                  <a href="Ernakulam.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
                 <img src="thrissur.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
+<div class="card-body">
                   <h5 class="card-title">THRISSUR</h5>
                   <p class="card-text">Athirappilly Falls, is situated in Athirappilly Panchayat, Chalakudy Taluk, Thrissur District of Kerala, India on the Chalakudy River, which originates… Shakthan Thampuran Palace is situated in City of Thrissur in Kerala state, India. It is named as Vadakkekara Palace, was…Thrissur is known as the cultural capital of Kerala, and the land of Poorams. The district is known for its ancient temples, churches, and mosques. Thrissur Pooram is the most colourful temple festival in Kerala.</p>
-                  <a href="#" class="btn btn-primary">GO</a>
+                  <a href="Thrissur.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -130,7 +130,7 @@
                 <div class="card-body">
                   <h5 class="card-title">PALAKKAD</h5>
                   <p class="card-text">This beautiful district in Kerala is very famous for the Palakkad Fort, the Jain temple, the annual Ratholsavam and of course for the extremely beautiful green and lush Malampuzha gardens and dams. Some of the major points of attraction in this spectacular place are the Tipu Sultan Fort and the Fantasy park.In addition to visiting Silent Valley National Park, Palakkad Fort, Vadakkanthara Temple, Malampuzha Gardens and Dam, Kollengode Palace, and Jainmedu Jain Temple, you can also spend a day experiencing the wildlife at Parambikulam Tiger Reserve, watching the sunset at Kava Island, trekking to Dhoni Falls, and catching ...</p>
-                  <a href="#" class="btn btn-primary">GO</a> </a>
+                  <a href="Palakkad.html" class="btn btn-primary">GO</a> </a>
                 </div>
               </div>
         </div>
@@ -140,7 +140,7 @@
                 <div class="card-body">
                   <h5 class="card-title">MALAPPURAM</h5>
                   <p class="card-text">Best of Malappuram tourist places include names of Kottakkunnu, Kadalundi Bird Sanctuary, Keralam Kundu Waterfalls, Nedumkayam, Arimbra Hills, Adyanpara Waterfalls, and many others to explore. There are a number of elements that make up the city of Malappuram a favorite among tourists.Malappuram was the first e-literate as well as the first cyber literate district of India. The district has four major rivers, namely Bharathappuzha, Chaliyar, Kadalundippuzha, and Tirur Puzha, out of which the former three are also included in the five longest rivers in Kerala.</p>
-                  <a href="#" class="btn btn-primary">GO</a>
+                  <a href="Malappuram.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -152,7 +152,7 @@
                   <p class="card-text">Kozhikode is the largest urban area in the state and 195th largest urban area in the world. During classical antiquity and the Middle Ages, Kozhikode was dubbed the “City of Spices” for its role as the major trading point of Eastern spices.Endowed with lush green countrysides, serene beaches, historic sites, wildlife sanctuaries, rivers, and hills, this city enchants both its inhabitants and its guests. With its unique culture and friendly ambiance, Kozhikode is a wondrous destination for all.
 
                 </p>
-                  <a href="#" class="btn btn-primary">GO</a>
+                  <a href="Kozhikkode.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -163,7 +163,7 @@
                   <h5 class="card-title">WAYANAD</h5>
                   <p class="card-text">Beisdes, Muthanga Wildlife Sanctuary, Tholpetty, Karappuzha Dam, Jain Temple at Sultan Bathery, Tiger Valley, Meenmutty Falls, Soochippara Waterfalls, Chembra Hills, Bird Sanctuary in north Wayanad, Thirunelly Temple and Kuruva Islands are the other nearby tourist destinations in and around Wayanad.About 885.92 sq.km of area is under forest. The culture of Wayanad is mainly tribal oriented. Though considered as backward, this District is perhaps one of the biggest foreign exchange earners of the State, with its production of cash crops like pepper,cardamom, coffee, tea, spices and other condiments.
                 </p>
-                  <a href="#" class="btn btn-primary">VISIT</a>
+                  <a href="Wayanad.html" class="btn btn-primary">VISIT</a>
                 </div>
               </div>
         </div>
