--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
     <a class="nav-link" href="district.html">District</a>
     <a class="nav-link" href="contact us.html">Contact Us</a>
-    <a class="nav-link disabled" aria-disabled="true">Login</a>
-    <a class="nav-link disabled" aria-disabled="true">Sign up</a>
+    <a class="nav-link" href="login.html">Login</a>
+    <a class="nav-link" href="Sign up.html">Sign up</a>
+    
       </nav>
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
