--- a/Kottayam.html
+++ b/Kottayam.html
@@ -19,8 +19,8 @@
 
     <div class="ktym1"></div> 
     <div class="container">
-    <div class="tem"><h1>Perunthenaruvi Waterfalls</h1></div>
-    <p>Located on the Western Ghats of the Sahyadri Range, Perunthenaruvi is famous for the waterfalls there. The waterfalls are known for their wide area, rather than their height. It is located in Pathanamthitta district of Kerala state. The stream later unites with the Pamba River.</p>
+    <div class="tem"><h1>Illikkal Kallu</h1></div>
+    <p>Illikkal Kallu is a Thalanadu located on top of the Illickal Malaa in the Kottayam district of Kerala, India.The distance from kottayam railway station to illikal kallu is 57km. Situated at around 3500 feet above sea level, Illickal Kallu is a major tourist attraction in Thalanadu.</p>
     <div><img src="" class="center"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
