--- a/contact us.html
+++ b/contact us.html
@@ -31,9 +31,9 @@
   <body>
     <!-- Navbar start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="home.html"
+      <a class="navbar-brand" href="index.html"
         ><img
-          src="./images/logo.png"
+          src="konni.jpg"
           alt="Logo"
           width="auto"
           height="70"
@@ -54,10 +54,10 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="home.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="districts.html">District</a>
+            <a class="nav-link" href="district.html">District</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact Us</a>
