--- a/district.html
+++ b/district.html
@@ -10,10 +10,11 @@
   <nav class="nav">
     <h1>KERALA TOURISM</h1>
     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-    <a class="nav-link" href="#">District</a>
-    <a class="nav-link" href="#">Contact Us</a>
-    <a class="nav-link disabled" aria-disabled="true">Login</a>
-    <a class="nav-link disabled" aria-disabled="true">Sign up</a>
+    <a class="nav-link" href="district.html">District</a>
+    <a class="nav-link" href="contact us.html">Contact Us</a>
+    <a class="nav-link" href="login.html">Login</a>
+    <a class="nav-link" href="signup.html">Sign up</a>
+    
       </nav>
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
@@ -163,7 +164,7 @@
                   <h5 class="card-title">WAYANAD</h5>
                   <p class="card-text">Beisdes, Muthanga Wildlife Sanctuary, Tholpetty, Karappuzha Dam, Jain Temple at Sultan Bathery, Tiger Valley, Meenmutty Falls, Soochippara Waterfalls, Chembra Hills, Bird Sanctuary in north Wayanad, Thirunelly Temple and Kuruva Islands are the other nearby tourist destinations in and around Wayanad.About 885.92 sq.km of area is under forest. The culture of Wayanad is mainly tribal oriented. Though considered as backward, this District is perhaps one of the biggest foreign exchange earners of the State, with its production of cash crops like pepper,cardamom, coffee, tea, spices and other condiments.
                 </p>
-                  <a href="Wayanad.html" class="btn btn-primary">VISIT</a>
+                  <a href="Wayanad.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -173,7 +174,7 @@
                 <div class="card-body">
                   <h5 class="card-title">KANNUR</h5>
                   <p class="card-text">Some of the best places to visit in Kannur include Payyambalam Beach, St. Angelo Fort, Muzhappilangad Drive-in Beach, Aaralam Wildlife Sanctuary, Parassinikkadavu Snake Park, Arakkal Museum, Kavvayi Islands, Madayipara, Dharmadam Island, Baby Beach, and Sundareswara Temple.Kannur Cantonment is the only cantonment board in Kerala. The Indian Naval Academy at Ezhimala is Asia's largest, and the world's third-largest, naval academy. Muzhappilangad beach is the longest drive-in beach in Asia and appeared among the top six best beaches for driving in the world in a BBC Top Gear article.</p>
-                  <a href="#" class="btn btn-primary">VISIT</a>
+                  <a href="Kannur.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
@@ -183,7 +184,7 @@
                 <div class="card-body">
                   <h5 class="card-title">KASARGOD</h5>
                   <p class="card-text">The district has famous tourist centres, including the international fame BEKAL FORT & BEACH. There are also places which can be converted to attract the tourists. Kasaragod is known as the Land of Gods, Forts, Rivers, Beautiful hills and lengthy sandy beaches.Since Kasargod is known for its coir and handloom industry, do go out shopping for the products made of coir. Also check out the exclusive sea shell products and other artifacts unique to this amazing town.</p>
-                  <a href="#" class="btn btn-primary"></a>VISIT</a>
+                  <a href="kasargode.html" class="btn btn-primary">GO</a>
                 </div>
               </div>
         </div>
