--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="nav-link" href="district.html">District</a>
     <a class="nav-link" href="contact us.html">Contact Us</a>
     <a class="nav-link" href="login.html">Login</a>
-    <a class="nav-link" href="Sign up.html">Sign up</a>
+    <a class="nav-link" href="signup.html">Sign up</a>
     
       </nav>
       <div id="carouselExample" class="carousel slide">
